--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <input type="text" id="fatherName" placeholder="Father's Name" readonly>
 
         <p class="error" id="userDetails"></p>  
+        <h1>Sample heading 1</h1>
     </div>
 </body>
 </html>
