Added sample 2 heading

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
         <p class="error" id="userDetails"></p> 
         <h1>Sample heading 1 tag</h1>
+        <h2>Sample heading 2 tag</h2>
     </div>
 </body>
 </html>
